# Vendor_Management_System

./: .gitignore  README.md  db.sqlite3  endpoints.har  manage.py  pyproject.toml  requirements.txt
Accounts/: admin.py  models.py  serializers.py
Accounts/migrations/: 0001_initial.py
Vendors/: admin.py  apps.py  asgi.py  models.py  serializers.py  settings.py  signals.py  urls.py  views.py  wsgi.py
Vendors/migrations/: 0001_initial.py  0002_historicalperformance.py  0002_rename_vendorperformanceaverages_vendorperformanceaverage.py  0003_alter_purchaseorder_po_number.py  0003_purchaseorder.py  0004_alter_purchaseorder_status.py  0004_vendor_vendor_user.py  0005_remove_purchaseorder_quality_rating_and_more.py  0005_rename_vendor_user_vendor_vendor_user_id.py  0006_alter_purchaseorder_status.py  0007_alter_purchaseorder_acknowledgment_date.py
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
historical_performance/: models.py
purchase_order/: models.py
vendors_management/: asgi.py  settings.py  urls.py  wsgi.py
